# algorithms

list/: CMakeLists.txt  README.md  main.cpp  singleList.cpp
list/include/: singleList.h
list/src/: main.cpp  singleList.cpp
sort/: .cproject  insert_sort.c  main.c  merge_sort.c
